# tkt0605

./: .gitignore  CLAUDE.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
content/information/: whoami.md
content/mylist/: hobby.md
posts/movies/: movie_1.md  movie_10.md  movie_11.md  movie_12.md  movie_13.md  movie_14.md  movie_15.md  movie_16.md  movie_17.md  movie_2.md  movie_3.md  movie_4.md  movie_5.md  movie_6.md  movie_7.md  movie_8.md  movie_9.md  movies.md
posts/musics/: music.md  music_1.md  music_10.md  music_11.md  music_12.md  music_13.md  music_14.md  music_2.md  music_3.md  music_4.md  music_5.md  music_6.md  music_7.md  music_8.md  music_9.md
posts/novels/: novel_1.md  novel_2.md  novel_3.md  novel_4.md  novel_5.md  novels.md
posts/projects/: HammurabiLang.md  Threebody.md  portfolio.md  project_1.md  project_2.md  project_3.md
posts/travels/: bangkok.md  beijing.md  hong_kong.md  japan.md  macau.md  san_francisco.md  seoul.md  singapore.md  sydney.md  travels.md
public/: CNAME
src/: build.py  dev-server.py  index.css
templates/: base.html  index.html
templates/posts/: list_page.html
templates/posts/movies/: list.html  page.html
templates/posts/musics/: list.html  page.html
templates/posts/novels/: list.html
templates/posts/projects/: list.html  page.html
templates/posts/travels/: list.html
